Fix some CSS issues with the table component (#67)
* Fix overlapping Module Name and Details icon

- This commit fixes the overlapping module name and details icon when the module path is really long.
- I used flex box on the parent <li> and then override specific styles to handle tihs case. It only seems to happen for the mixed section and not the others therefore the fix is only applied there.

* Fix a CSS issue where the user can't scroll to the bottom of the container to see the entire list of modules

--- a/src/client/components/table/style.scss
+++ b/src/client/components/table/style.scss
@@ -13,6 +13,7 @@
   ul.table-body {
     height: 470px;
     overflow-y: scroll;
+    padding-bottom: 100px;
     .col {
       border-bottom: 1px solid $dark;
       border-top: 0px;
@@ -49,6 +50,26 @@
         width: 25%;
         &:first-child {
           width: 75%;
+        }
+      }
+      .flex-li {
+        display: flex;
+        .col {
+          position: static;
+          display: flex;
+          flex-grow: 1;
+          align-items: center;
+          .module-name {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+          .details {
+            position: static;
+            transform: none;
+            width: 60px;
+            margin-left: 5px;
+          }
         }
       }
     }
